fix header alignment.

--- a/src/components/MainHeader.module.css
+++ b/src/components/MainHeader.module.css
@@ -1,4 +1,5 @@
 .main-header {
   align-items: center;
   flex-direction: row;
+  margin-top: 1rem;;
 }
