--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,8 +66,8 @@ small, small a {
 }
 
 h1 {
-  margin-block-end: 3rem;
-  margin-block-start: 3rem;
+  margin-block-end: 2rem;
+  margin-block-start: 2rem;
 }
 
 h1, h1 a {
@@ -76,8 +76,8 @@ h1, h1 a {
 }
 
 h2 {
-  margin-block-end: 2rem;
-  margin-block-start: 2rem;
+  margin-block-end: 1.75rem;
+  margin-block-start: 1.75rem;
 }
 
 h2, h2 a {
@@ -96,8 +96,8 @@ h3, h3 a {
 }
 
 h4 {
-  margin-block-end: 1rem;
-  margin-block-start: 1rem;
+  margin-block-end: 1.25rem;
+  margin-block-start: 1.25rem;
 }
 
 h4, h4 a {
@@ -106,8 +106,8 @@ h4, h4 a {
 }
 
 h5 {
-  margin-block-end: 0.75rem;
-  margin-block-start: 0.75rem;
+  margin-block-end: 1rem;
+  margin-block-start: 1rem;
 }
 
 h5, h5 a {
@@ -116,8 +116,8 @@ h5, h5 a {
 }
 
 h6 {
-  margin-block-end: 0.5rem;
-  margin-block-start: 0.5rem;
+  margin-block-end: 0.75rem;
+  margin-block-start: 0.75rem;
 }
 
 h6, h6 a {
@@ -127,6 +127,7 @@ h6, h6 a {
 
 ul {
   margin-block-start: 0.25rem;
+  margin-block-end: 0;
   padding-left: 2rem;
 }
 
